fix: on firefox active add-ons not highlighting replaced :has() with data-active attribute

--- a/src/components/add-ons/styles.module.scss
+++ b/src/components/add-ons/styles.module.scss
@@ -23,7 +23,7 @@
     @include hover {
       border-color: var(--clr-highlight);
     }
-    &:has(input:checked) {
+    &[data-active='true'] {
       background-color: var(--magnolia);
     }
 
